--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/yyolk/ogle/issues"
   },
-  "homepage": "https://github.com/yyolk/ogle#readme"
+  "homepage": "https://github.com/yyolk/ogle#readme",
+  "dependencies": {
+    "JSONPath": "^0.10.0",
+    "qs": "^4.0.0",
+    "request": "^2.60.0"
+  }
 }
